# jsi

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-jsi-poc.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativejsipoc/: DatabaseHelper.java  JsiPocModule.java  JsiPocModulePackage.java  JsiPocPackage.java  Note.java  RNSharedPreferencesModule.java  RNSharedPreferencesReactPackage.java  SharedDataProvider.java  SharedHandler.java  Student.java  StudentNames.java
android/src/main/java/com/reactnativejsipoc/db/: DatabaseHelper.java  Student.java  StudentNames.java
android/src/main/java/com/reactnativejsipoc/jsi/: JsiPocModule.java  JsiPocModulePackage.java  JsiPocPackage.java
android/src/main/java/com/reactnativejsipoc/sp/: RNSharedPreferencesModule.java  RNSharedPreferencesReactPackage.java  SharedDataProvider.java  SharedHandler.java
cpp/: react-native-jsi-poc.cpp  react-native-jsi-poc.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: File.swift  JSIInterfaceCxx.h  Podfile
example/ios/JsiPocExample/: AppDelegate.h  AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/JsiPocExample.xcodeproj/: project.pbxproj
example/ios/JsiPocExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx  ReactotronConfig.js  home.json
ios/: JSIUtils.h  JSIUtils.mm  JsiPoc.h  JsiPoc.mm
ios/JsiPoc.xcodeproj/: project.pbxproj
src/: index.tsx
(+6 files in other folders)
